--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Best Bazar</title>
 </head>
 <body>
-    <h1>Best Bazar, Jamner</h1>
+    <h1>
+        <a href="https://maps.app.goo.gl/2pispxamQHfYed5o7"
+           target="_blank" 
+           style="text-decoration: none; color: inherit;">
+            Best Bazar, Jamner
+        </a>
+    </h1>
 </body>
 </html>
